[gd_scene load_steps=11 format=3 uid="uid://cgt4erjwd87a2"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ybb3l"]
[ext_resource type="PackedScene" uid="uid://yv53eeuel8ho" path="res://scenes/player.tscn" id="2_3472i"]
[ext_resource type="Script" path="res://scripts/walls.gd" id="3_h2amn"]
[ext_resource type="AudioStream" uid="uid://ck03mwx1c8vm1" path="res://explosion.wav" id="4_c2e6b"]
[ext_resource type="AudioStream" uid="uid://4iak5f4u42nn" path="res://pickupCoin.wav" id="5_fppyb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lfrfa"]
albedo_color = Color(0.137534, 0.709126, 0.29122, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wqy27"]
albedo_color = Color(0.328572, 0.635471, 5.77569e-07, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uw5ng"]
albedo_color = Color(0.698327, 0.463447, 0.193027, 1)

[sub_resource type="Environment" id="Environment_vuc8w"]
background_mode = 1
background_color = Color(0.403903, 8.42288e-07, 9.62615e-08, 1)
fog_enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_qkmq0"]
font_size = 70

[node name="Main" type="Node3D"]
script = ExtResource("1_ybb3l")

[node name="Environment" type="Node3D" parent="."]

[node name="FloorLeft" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -8.5)
size = Vector3(3, 1, 27)
material = SubResource("StandardMaterial3D_lfrfa")

[node name="FloorCenter" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.5)
size = Vector3(3, 1, 27)
material = SubResource("StandardMaterial3D_wqy27")

[node name="FloorRight" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -8.5)
size = Vector3(3, 1, 27)
material = SubResource("StandardMaterial3D_lfrfa")

[node name="RightWall" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, -8.5)
size = Vector3(1, 2, 27)
material = SubResource("StandardMaterial3D_uw5ng")

[node name="LeftWall" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, -8.5)
size = Vector3(1, 2, 27)
material = SubResource("StandardMaterial3D_uw5ng")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.98254, 0.0649766, 0.174338, -0.183013, 0.506236, 0.842752, -0.0334972, -0.859944, 0.509289, 0, 14, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("2_3472i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 10, 2)
environment = SubResource("Environment_vuc8w")
far = 200.0

[node name="Walls" type="Node3D" parent="."]
script = ExtResource("3_h2amn")

[node name="WallSpawnTimer" type="Timer" parent="Walls"]
autostart = true

[node name="SpeedUpTimer" type="Timer" parent="Walls"]
wait_time = 10.0
autostart = true

[node name="RestartButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -27.5
offset_right = 99.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "RESTART
"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.0
offset_right = 239.0
offset_bottom = 90.0
grow_horizontal = 2
text = "0
"
label_settings = SubResource("LabelSettings_qkmq0")
horizontal_alignment = 1

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_c2e6b")

[node name="CoinPickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fppyb")

[connection signal="area_entered" from="Player" to="." method="_on_player_area_entered"]
[connection signal="timeout" from="Walls/WallSpawnTimer" to="Walls" method="_on_wall_spawn_timer_timeout"]
[connection signal="timeout" from="Walls/SpeedUpTimer" to="Walls" method="_on_speed_up_timer_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
